--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   --bg-h2: hsl(var(--hue), 91%, 96%);
 
   font-size: 62.5%;
-  --fs-body: 1.4rem;
+  --fs-body: 1.6rem;
   --fs-header: clamp(4rem, 0.5rem + 4vw, 5rem);
   --fs-header-sm: clamp(2rem, 0.5rem + 1vw, 2.3rem);
 }
@@ -27,24 +27,9 @@ img {
   width: 100%;
 }
 
-body {
+body,
+html {
   background: var(--bg-primary);
-}
-
-body::before {
-  content: "";
-  height: 27.9rem;
-  width: 100%;
-
-  background: var(--bg-header);
-
-  top: 0;
-  left: 0;
-  display: flex;
-  position: absolute;
-  z-index: -1;
-
-  animation: topdown 700ms;
 }
 
 .page {
@@ -53,40 +38,24 @@ body::before {
   margin: 0 auto;
 }
 
-.logo {
-  margin: 3.2rem 0 2rem;
-  text-align: center;
-  animation: topdown 700ms;
-}
-
 .logo svg {
-  width: 60%;
+  animation: topdown 900ms;
+  margin: 3rem 0 2rem;
+  max-width: 19rem;
 }
 
 header {
-  height: 100%;
-  text-align: center;
-}
-
-header::before {
-  animation: topdown 700ms;
-
-  content: "";
-  height: 4.9rem;
-  width: 100%;
-
   left: 0;
-  top: 20.2rem;
-
-  background: var(--bg-header-h1);
-
-  display: flex;
+  text-align: center;
+  height: 27.9rem;
+  background: var(--bg-header);
   position: absolute;
-  z-index: -1;
 }
 
 header h1 {
   animation: topdown 900ms;
+  width: 100%;
+  background: var(--bg-header-h1);
 
   text-shadow: 2px 2px 4px #00000040;
   color: var(--fc-header);
@@ -94,23 +63,49 @@ header h1 {
   font-size: var(--fs-header);
   font-weight: 400;
 
+  position: absolute;
+
   letter-spacing: 2px;
 }
 
 header p {
   color: var(--fc-body);
-  margin: 4.5rem 0 5rem;
+  margin: 9.5rem 7.5rem;
   font-family: var(--ff-body);
   font-size: var(--fs-body);
-  line-height: 1.7rem;
+  line-height: 2rem;
   padding: 0.7rem;
-
   animation: leftright 700ms;
 }
 
 main {
+  padding-top: 45rem;
   display: grid;
   gap: 3.2rem;
+}
+
+main div:nth-child(1) {
+  height: 25rem;
+}
+
+main div:nth-child(2) {
+  height: 45rem;
+}
+
+main div:nth-child(3) {
+  height: 25rem;
+}
+
+main div:nth-child(4) {
+  height: 45rem;
+}
+
+main div:nth-child(5) {
+  height: 25rem;
+}
+
+main div:nth-child(6) {
+  height: 45rem;
 }
 
 .cards {
@@ -130,30 +125,6 @@ main {
 .cards img:hover {
   transform: scale(1.1);
   filter: saturate(1.3);
-}
-
-.cards:nth-child(1) img {
-  height: 25rem;
-}
-
-.cards:nth-child(2) img {
-  height: 45rem;
-}
-
-.cards:nth-child(3) img {
-  height: 25rem;
-}
-
-.cards:nth-child(4) img {
-  height: 45rem;
-}
-
-.cards:nth-child(5) img {
-  height: 25rem;
-}
-
-.cards:nth-child(6) img {
-  height: 45rem;
 }
 
 .cards h2 {
@@ -185,6 +156,51 @@ main {
 footer {
   display: none;
 }
+
+@keyframes wobble-vertical-on-hover {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    transform: translateY(8px);
+  }
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+  }
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    transform: translateY(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+.wobble-vertical-on-hover {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.wobble-vertical-on-hover:hover, .wobble-vertical-on-hover:focus, .wobble-vertical-on-hover:active {
+  -webkit-animation-name: wobble-vertical-on-hover;
+  animation-name: wobble-vertical-on-hover;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+
 
 @keyframes topdown {
   0% {
@@ -233,99 +249,49 @@ footer {
 }
 
 @media (min-width: 700px) {
-  :root {
-    --fs-header: 4.5rem;
-  }
-
-  .logo svg {
-    width: 18.9rem;
-  }
-
   .page {
     max-width: 117rem;
     padding: 0 5rem;
   }
 
   main {
-    grid-template-columns: 1fr 1fr;
-  }
+    margin-bottom: 7rem;
 
-  main div:nth-child(1) {
-    grid-row: 1/1;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto;
+    gap: 3.2rem 3.2rem;
+    grid-template-areas:
+      "img1 img2"
+      "img3 img2"
+      "img3 img4"
+      "img5 img6";
   }
-
-  main div:nth-child(2) {
-    grid-row: 1/3;
+  .img1 {
+    grid-area: img1;
   }
-
-  main div:nth-child(3) {
-    grid-row: auto;
+  .img2 {
+    grid-area: img2;
   }
-
-  main div:nth-child(4) {
-    grid-row: 2/4;
+  .img3 {
+    grid-area: img3;
   }
-
-  main div:nth-child(5) {
-    grid-row: auto;
+  .img4 {
+    grid-area: img4;
   }
-
-  main div:nth-child(6) {
-    grid-row: auto;
+  .img5 {
+    grid-area: img5;
+  }
+  .img6 {
+    grid-area: img6;
   }
 }
 
-@media (min-width: 1050px) {
-  header {
-    max-width: 37.7rem;
-  }
-
-  body {
-    position: relative;
-  }
-
-  body::before {
-    content: "";
-    height: 100%;
-    max-width: 37.7rem;
-
-    background: var(--bg-header);
-
-    z-index: -1;
-
-    animation: topdown 700ms;
-  }
-
-  header h1 {
-    font-size: 4.8rem;
-  }
-
-  header p {
-    padding: 3rem 5.2rem 0;
-    margin-bottom: 0;
-    line-height: 3rem;
-    font-size: 2rem;
-    color: hsla(0, 0%, 100%, 1);
-  }
-
-  header::before {
-    animation: topdown 700ms;
-
-    content: "";
-    height: 4.9rem;
-    width: 37.7rem;
-
-    left: 0;
-    top: 18rem;
-
-    background: var(--bg-header-h1);
-
-    position: absolute;
-    z-index: -1;
-  }
-
-  .logo svg {
-    width: 15.7rem;
+@media (min-width: 1000px) {
+  body,
+  html {
+    overflow-x: hidden;
+    height: 100vh;
+    width: 100%;
   }
 
   .page {
@@ -335,80 +301,85 @@ footer {
     padding: 0;
   }
 
+  header {
+    overflow-y: hidden;
+    max-width: 30%;
+    min-height: 100vh;
+
+    background: var(--bg-header);
+    position: absolute;
+  }
+
+  header p {
+    padding: 3rem 1rem 0;
+    margin-bottom: 0;
+    line-height: 2.4rem;
+    font-size: 1.8rem;
+    color: hsla(0, 0%, 100%, 1);
+  }
+
   .cards {
     position: relative;
     display: flex;
   }
 
-  .cards:nth-child(1) img {
-    height: auto;
-  }
-
-  .cards:nth-child(2) img {
-    height: auto;
-  }
-
-  .cards:nth-child(3) img {
-    height: auto;
-  }
-
-  .cards:nth-child(4) img {
-    height: auto;
-  }
-
-  .cards:nth-child(5) img {
-    height: auto;
-  }
-
-  .cards:nth-child(6) img {
-    height: auto;
-  }
-
   main {
-    padding: 7rem;
+    margin: auto;
 
-    display: grid;
-    height: 100%;
+    transform: translate(24.8%, 0%);
+    padding: 5rem;
+    padding-top: 7rem;
 
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 15rem 15rem 15rem;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    gap: 3.2rem 3.2rem;
+    grid-template-areas:
+      "img1 img3 img5"
+      "img2 img3 img6"
+      "img2 img4 img6";
+    max-width: 58.7%;
+    min-width: 0;
   }
-
-  main div:nth-child(1) {
-    grid-row: 1/1;
+  .img1 {
+    grid-area: img1;
+    max-height: 15rem;
   }
-
-  main div:nth-child(2) {
-    grid-row: 1/3;
+  .img2 {
+    grid-area: img2;
+    max-height: 35rem;
   }
-
-  main div:nth-child(3) {
-    grid-row: auto;
+  .img3 {
+    grid-area: img3;
+    max-height: 35rem;
   }
-
-  main div:nth-child(4) {
-    grid-row: 2/4;
+  .img4 {
+    grid-area: img4;
+    max-height: 15rem;
   }
-
-  main div:nth-child(5) {
-    grid-row: 1/2;
+  .img5 {
+    grid-area: img5;
+    max-height: 15rem;
   }
-
-  main div:nth-child(6) {
-    grid-row: 2/4;
+  .img6 {
+    grid-area: img6;
+    max-height: 35rem;
   }
 
   footer {
-    display: block;
+    margin: auto;
+    display: flex;
+    position: relative;
+
+    transform: translate(54%, 0%);
+    margin-bottom: 5rem;
 
     color: #4a4e69;
-    font-family: var(--ff-body);
-    margin-left: 37.7rem;
 
-    padding: 0 0 4.5rem;
+    font-family: var(--ff-body);
+
     text-align: center;
 
-    font-size: 1.4rem;
+    font-size: 1.6rem;
   }
 
   footer a {
@@ -417,8 +388,4 @@ footer {
   }
 }
 
-@media (max-width: 384px) {
-  .logo svg {
-    width: 19.3rem;
-  }
-}
+
